force-app/main/default/objects/Amplemarket_Credit_Config__c/Amplemarket_Credit_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Org-level configuration for Amplemarket credit tracking: weekly limits per category, enforcement toggle, alert recipient, and per-category last-alerted week.</description>
    <label>Amplemarket Credit Config</label>
</CustomObject>