force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Annual_Credit_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Credit_Allowance__c</fullName>
    <label>Annual Credit Allowance</label>
    <description>Total credits available for the contract period. Blank or zero means no annual limit.</description>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>