force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Annual_Notified_Period__c.field-meta.xml
<CustomField>
    <fullName>Annual_Notified_Period__c</fullName>
    <label>Annual Notified Period</label>
    <description>Contract start date of the most recent annual-allowance alert, used to send at most one alert per contract period.</description>
    <type>Date</type>
</CustomField>