force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Auto_Enrichment_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrichment_Enabled__c</fullName>
    <label>Automated Enrichment Enabled</label>
    <description>When enabled, a scheduled job drains queued Enrichment Requests and performs the callouts as the user who enabled it.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>