force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Auto_Enrichment_Interval__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrichment_Interval__c</fullName>
    <label>Automated Enrichment Interval (Minutes)</label>
    <description>How often the automated enrichment job runs: 5, 10, 15, 20, 30, or 60 minutes.</description>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>