force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Auto_Enrichment_Run_As__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrichment_Run_As__c</fullName>
    <label>Automated Enrichment Runs As</label>
    <description>Id of the user who enabled automated enrichment. The scheduled job performs callouts as this user, so this user must hold the Amplemarket permission set and External Credential access.</description>
    <length>18</length>
    <type>Text</type>
</CustomField>