force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Company_Search_Limit__c.field-meta.xml
<CustomField>
    <fullName>Company_Search_Limit__c</fullName>
    <label>Company Search Weekly Limit</label>
    <description>Weekly credit limit for company (Account) searches. Blank or zero means no limit.</description>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>