force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Company_Search_Notified_Week__c.field-meta.xml
<CustomField>
    <fullName>Company_Search_Notified_Week__c</fullName>
    <label>Company Search Notified Week</label>
    <description>Week-start date of the most recent company-search limit alert, used to send at most one alert per week.</description>
    <type>Date</type>
</CustomField>