force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <label>Contract End Date</label>
    <description>Last day of the current Amplemarket contract period. When this date passes, the period rolls forward and consumption restarts at zero.</description>
    <type>Date</type>
</CustomField>