force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <label>Contract Start Date</label>
    <description>First day of the current Amplemarket contract period. Consumption against the annual allowance is counted from this date.</description>
    <type>Date</type>
</CustomField>