force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Digest_Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Digest_Day_Of_Week__c</fullName>
    <label>Digest Day Of Week</label>
    <description>Day the weekly digest is sent, as a cron day-of-week token (MON, TUE, WED, THU, FRI, SAT, SUN).</description>
    <length>3</length>
    <type>Text</type>
</CustomField>