force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Digest_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Digest_Enabled__c</fullName>
    <label>Weekly Digest Enabled</label>
    <description>When enabled, a weekly credit usage digest is emailed on the configured day and time.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>