force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Digest_Hour__c.field-meta.xml
<CustomField>
    <fullName>Digest_Hour__c</fullName>
    <label>Digest Hour</label>
    <description>Hour of day (0-23) the weekly digest is sent, in the timezone of the user who saved the schedule.</description>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>