force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Digest_Minute__c.field-meta.xml
<CustomField>
    <fullName>Digest_Minute__c</fullName>
    <label>Digest Minute</label>
    <description>Minute of the hour (0-59) the weekly digest is sent.</description>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>