force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Digest_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Digest_Recipients__c</fullName>
    <label>Digest Recipients</label>
    <description>Comma-separated email addresses that receive the weekly credit digest. Any address may be used; recipients do not need to be Salesforce users.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>