force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Enforce_Limits__c.field-meta.xml
<CustomField>
    <fullName>Enforce_Limits__c</fullName>
    <label>Enforce Limits</label>
    <description>When enabled, enrichment of a category is blocked once its weekly limit is reached. When disabled, limits only trigger alerts.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>