force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Notify_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Notify_User_Id__c</fullName>
    <label>Notify User Id</label>
    <description>Id of the Salesforce user who receives credit-limit alerts. Blank means no alerts are sent.</description>
    <length>18</length>
    <type>Text</type>
</CustomField>