force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Person_Search_Limit__c.field-meta.xml
<CustomField>
    <fullName>Person_Search_Limit__c</fullName>
    <label>Person Search Weekly Limit</label>
    <description>Weekly credit limit for person (Lead/Contact) searches. Blank or zero means no limit.</description>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>