force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Person_Search_Notified_Week__c.field-meta.xml
<CustomField>
    <fullName>Person_Search_Notified_Week__c</fullName>
    <label>Person Search Notified Week</label>
    <description>Week-start date of the most recent person-search limit alert, used to send at most one alert per week.</description>
    <type>Date</type>
</CustomField>