force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Phone_Reveal_Limit__c.field-meta.xml
<CustomField>
    <fullName>Phone_Reveal_Limit__c</fullName>
    <label>Phone Reveal Weekly Limit</label>
    <description>Weekly credit limit for phone reveals. Blank or zero means no limit.</description>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>