force-app/main/default/objects/Amplemarket_Credit_Config__c/fields/Phone_Reveal_Notified_Week__c.field-meta.xml
<CustomField>
    <fullName>Phone_Reveal_Notified_Week__c</fullName>
    <label>Phone Reveal Notified Week</label>
    <description>Week-start date of the most recent phone-reveal limit alert, used to send at most one alert per week.</description>
    <type>Date</type>
</CustomField>